# fastApi

./: .gitIgnore  README.md  main.py  pyproject.toml
