[tool.poetry]
name = "projectfastapi"
version = "0.1.0"
description = ""
authors = ["ashutosh <ashutosh.mishra@unicodesystems.co.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.29.0"
fastapi = "^0.111.0"
pydantic = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
